--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -3,7 +3,7 @@
 @import 'base/border';
 @import 'base/normalize';
 @import 'base/reset';
-
+@import 'instagram/instagram';
 @import 'components';
 body,
 html,
